glib2.0 (2.66.7-1apertis0vcs0) vcs; urgency=medium

  * Build for atari vcs project
  * Remaining atari changes:
    * Relax build deps

 -- Christopher Obbard <chris.obbard@collabora.com>  Fri, 14 May 2021 08:46:16 +0100

glib2.0 (2.66.7-1apertis0) apertis; urgency=medium

  * Sync from Debian debian/bullseye.

 -- Apertis CI <devel@lists.apertis.org>  Thu, 11 Mar 2021 08:34:34 +0000

glib2.0 (2.66.7-1) unstable; urgency=high

  * New upstream release
    - Fix another regression caused by the GHSL-2021-045 fixes in 2.66.6
    - Warn and fail on integer overflow in g_byte_array_new_take()
      for arrays larger than G_MAXUINT (similar to GHSL-2021-045)
    - Disallow using currently-undefined D-Bus connection or server flags,
      to prevent forward-compatibility problems with new security-sensitive
      flags that are likely to be introduced in GLib 2.68
  * Drop previous patches for GHSL-2021-045 regressions, applied upstream

 -- Simon McVittie <smcv@debian.org>  Thu, 11 Feb 2021 17:08:14 +0000

glib2.0 (2.66.6-2) unstable; urgency=high

  * d/patches: Add proposed fixes for regressions in 2.66.6.
    Two functions that took either a positive length, or -1 to indicate
    strlen(), had assertions with the wrong sense in 2.66.6, causing some
    valid uses of those functions to regress.
  * d/p/debian/61_glib-compile-binaries-path.patch: Remove.
    This patch turns out to be unnecessary, and is harmful for
    cross-compiling. Thanks to Helmut Grohne (Closes: #982213)
  * Set high urgency to get the regression fixes into bullseye

 -- Simon McVittie <smcv@debian.org>  Mon, 08 Feb 2021 19:43:08 +0000

glib2.0 (2.66.6-1) unstable; urgency=high

  * New upstream release
    - Fix various integer overflows, some of them potentially exploitable
      (GHSL-2021-045)

 -- Simon McVittie <smcv@debian.org>  Thu, 04 Feb 2021 20:24:20 +0000

glib2.0 (2.66.5-1) unstable; urgency=medium

  * New upstream release, equivalent to 2.66.4-27-g0051c0635